--- a/code/regular_expressions.rmd
+++ b/code/regular_expressions.rmd
@@ -2,10 +2,100 @@
 title: "Regular expressions r cheatsheet"
 author: "Shanmukh"
 date: "April 10, 2019"
-output: html_document
----
+output:
+  html_document:
+    toc: TRUE
+    toc_depth: 2
+    df_print: paged
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+---
+Install library `strings`
+```{r echo=FALSE, warning=FALSE, message = FALSE}
+library(stringr)
+library(htmlwidgets)
+library(tidyverse)
+library(readr)
 ```
 
+# Regular expressions
+
+* grep -- returns index values of the elements it matched to the regrular expression pattern 
+
+* grep1 -- returns a logical values if the provided regrular expression pattern is found
+
+* syntax  grepl(pattern=<regex>,x= <string>)
+
+
+```{r}
+animals <- c("cat","moose","impala","ant","kiwi")
+
+grepl("a",animals) # checks for contains a
+
+grepl("^a",animals) #^a checks for starting with a
+
+grepl("a$",animals) # a$ checks for ending with a
+
+grep("a",animals) # checks for contains a
+
+which(grepl("a",animals))
+
+```
+
+* sub-- replaces first match value with replacement string
+
+* syntax  sub(pattern= <regex>, replacement=<string>,x=<string>)
+
+* gsub-- replaces all matched values with replacement string
+
+```{r}
+sub("a","b",animals) # replaces first a
+
+gsub("a","b",animals) # replaces all a in the string
+
+gsub("a|i","_",animals) # replaces all a or i with _ in the string
+
+```
+```{r}
+x <- c("apple", "banana", "pear")
+str_view(x, "an")
+```
+
+**Import text file**
+```{r}
+text <- read_lines("https://raw.githubusercontent.com/shapinna/Codeporfolio/master/Data/scraping.txt")
+text[1:3] # view first three lines of the file
+```
+
+**extract string - text**
+```{r}
+str_extract_all(text, "[0-9]+")[[1]] # list with numbers from the text file
+```
+
+**build regex**
+`[a-zA-Z]+\s[0-9][0-9],\s[0-9]{4}`
+
+```{r}
+dates <- regex("
+[a-zA-Z]+ # month
+\\s       # Space
+[0-9]     # 1 digit
+[0-9]     # 1 digit
+,         # comma
+\\s       # Space
+[0-9]{4}  # 4 digits
+", comments = TRUE)  # comments are valid with in the regex function
+```
+**Match regex - print all**
+```{r}
+str_match(text, dates) # regular expression format stored in the dates is compared with each line of the text file and NA is returned if matching records does not exists.
+```
+**Print only dates**
+```{r}
+# for loop to print only matching record exists
+results = str_match(text, dates)
+for (i in results){
+  if (!is.na(i)){
+    print(i)
+  }
+}
+```
